# lattice

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
app/: globals.css  not-found.tsx
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/adapters/: embedder.py  llm.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  answer.py  documents.py  health.py  search.py
backend/app/core/: config.py  logging.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  chunk.py  document.py  page.py
backend/app/schemas/: __init__.py  answer.py  chunk.py  document.py  page.py  search.py
backend/app/services/: answering.py  chunk_enrich.py  chunker.py  document_map.py  ingestion.py  lexical_index.py  pdf_parser.py  retrieval.py  vector_store.py
backend/scripts/: eval_retrieval.py
backend/tests/: conftest.py  test_answer_api.py  test_answering.py  test_chunk_enrich.py  test_chunker.py  test_document_map.py  test_documents_api.py  test_embedder.py  test_health.py  test_ingestion.py  test_lexical_index.py  test_llm_stub.py  test_retrieval.py  test_search_api.py  test_vector_store.py
backend/tests/fixtures/: build_sample_corpus.py
components/: ActivityRail.tsx  AnswerView.tsx  ChunksPanel.tsx  DocumentMap.tsx  HealthBadge.tsx  IngestionProgress.tsx  RefreshButton.tsx  ResultIntel.tsx  RetryDocumentButton.tsx  UploadDropzone.tsx
docs/: ARCHITECTURE.md  PERFORMANCE.md
frontend/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
lib/: api.ts
(+70 files in other folders)
